force-app/main/default/objects/FokusIntegration__mdt/FokusIntegration__mdt.object-meta.xml
<CustomObject>
    <label>FokusIntegration</label>
    <pluralLabel>FokusIntegrations</pluralLabel>
</CustomObject>