force-app/main/default/objects/FokusIntegration__mdt/fields/DebugSelectServiceStatement__c.field-meta.xml
<CustomField>
    <fullName>DebugSelectServiceStatement__c</fullName>
    <label>DebugSelectServiceStatement</label>
    <type>TextArea</type>
</CustomField>