force-app/main/default/objects/FokusIntegration__mdt/fields/DebugSelectStatement__c.field-meta.xml
<CustomField>
    <fullName>DebugSelectStatement__c</fullName>
    <label>DebugSelectStatement</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>