force-app/main/default/objects/FokusIntegration__mdt/fields/DeleteProcessedDelta__c.field-meta.xml
<CustomField>
    <fullName>DeleteProcessedDelta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DeleteProcessedDelta</label>
    <type>Checkbox</type>
</CustomField>